# neurolm

./: .gitattributes  .gitignore  DEPLOY_GITHUB_PAGES.md  README.md  index.html
.github/workflows/: deploy-pages.yml
model/: config.json  generation_config.json  model-q4_k_m.gguf
site/: app.js  engine.js  index.html  styles.css  wasm-worker.js
site/pkg/: lm_wasm.d.ts  lm_wasm.js  lm_wasm_bg.wasm.d.ts  package.json
tools/: bench_wasm_tps.mjs  build_and_test_local.sh  build_pages_dist.sh  build_wasm_local.sh
wasm/: Cargo.toml
wasm/.cargo/: config.toml
wasm/src/: lib.rs
