[package]
name = "lm_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.20", default-features = false, features = ["unstable_wasm"] }
getrandom = { version = "0.2", features = ["js"] }
# Required so transitive getrandom 0.3 (via candle stack) is wasm_js-capable.
getrandom_03 = { package = "getrandom", version = "0.3.4", features = ["wasm_js"] }
rand = { version = "0.8", features = ["small_rng"] }
web-sys = { version = "0.3", features = ["Window", "Performance", "console"] }
js-sys = "0.3"
candle-core = { version = "0.9", default-features = false }
candle-transformers = { version = "0.9", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
